# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "zoneinfo64"
description = "Working with ICU zoneinfo64.res timezone data bundles"
version = "0.3.0"
categories.workspace = true
keywords = ["timezone", "database"]

rust-version = "1.82"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
include.workspace = true

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locale_core = { workspace = true }
potential_utf = { workspace = true }
resb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
calendrical_calculations = { workspace = true }

chrono = { version = "0.4", optional = true }

[dev-dependencies]
itertools.workspace = true
jiff = { workspace = true, features = ["tzdb-bundle-always", "std"] }
chrono-tz-2025b = { package = "chrono-tz", version = "=0.10.4" }
jiff-tzdb-2025b = { package = "jiff-tzdb", version = "=0.1.4" }

[features]
chrono = ["dep:chrono"]

[lints]
workspace = true
