# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_benchmark_memory"
version = "0.0.0"
publish = false
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[package.metadata.cargo-all-features]
# Unpublished internal tool; skip
skip_package = true
